--- a/pom.xml
+++ b/pom.xml
@@ -123,7 +123,7 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>2.5.3</version>
+			<version>[2.9.10.4,)</version>
 		</dependency>
 		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
@@ -148,7 +148,7 @@
 		<dependency>
 			<groupId>commons-fileupload</groupId>
 			<artifactId>commons-fileupload</artifactId>
-			<version>1.2.2</version>
+			<version>[1.3.3,)</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
