--- a/helm-charts/values.yaml
+++ b/helm-charts/values.yaml
@@ -5,8 +5,8 @@ replicaCount: 1
 nodePort: 30157
 containerPort: 8080
 
-# To make the container name as per c_<username>_branchname
-containerName: c_sachinkumar08_
+# To make the container name as per c-<username>-branchname
+containerName: c-sachinkumar08-
 
 # Default branch name
 branch: master
