--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,5 +3,5 @@ sonar.projectKey=com.nagarro.devops-tools.devops:demosampleapplication
 sonar.projectName=demosampleapplication
 sonar.projectVersion=1.0
 sonar.sources=src/main/
-sonar.language=java
+sonar.language=maven
 sonar.java.binaries=./target/classes 
