--- a/helm-charts/templates/deployment.yaml
+++ b/helm-charts/templates/deployment.yaml
@@ -1,22 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: demo-sample-app
+  name: {{ include "helm-charts.fullname" . }}
   labels: 
-    app: demo-sample-app
+    {{- include "helm-charts.labels" . | nindent 4 }}
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
-      app: demo-sample-app
+      {{- include "helm-charts.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       labels:
-        app: demo-sample-app
+        {{- include "helm-charts.selectorLabels" . | nindent 8 }}
     spec:
       containers:
         - name: {{ .Values.containerName }}
-          image: {{ .Values.image }}
+          image: {{ required "Pass valid docker image name" .Values.image }}
           imagePullPolicy: Always
           ports:
             - containerPort: {{ .Values.containerPort }}
@@ -24,7 +24,9 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: demo-sample-app-service
+  name: {{ include "helm-charts.fullname" . }}
+  labels:
+    {{- include "helm-charts.labels" . | nindent 4 }}
 spec:
   type: NodePort
   ports:
@@ -34,4 +36,4 @@ spec:
       name: port8080
       nodePort: {{ .Values.nodePort }}
   selector: 
-    app: demo-sample-app
+    {{- include "helm-charts.selectorLabels" . | nindent 4 }}
